apps/grafana/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  creationTimestamp: null
  name: monitoring
spec: {}
status: {}
