apps/grafana/base/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    io.cilium/global-service: "true"
  labels:
    app: grafana
    app.kubernetes.io/component: grafana
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
  name: grafana
spec:
  ports:
  - name: http-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
    deployment: grafana
  type: ClusterIP
